# Connect-4-AI

./: .gitignore  Cargo.toml  README.md  model.mpk  model.safetensors  rustfmt.toml
logs/: tensor_ops.csv
src/: connect_four.rs  logger.rs  main.rs  player.rs  toy_nn.rs  ui.rs
src/connect_four/: check_for_win.rs  connect_four.rs  connect_four_enums.rs  game_board.rs  mod.rs  player.rs
src/neural_network/: episode.rs  mod.rs  model.rs  optimize_model.rs  train.rs  training_tensors.rs
src/training/: episode.rs  mod.rs  model.rs  optimize_model.rs  print_training_summary.rs  run_episode.rs  train.rs
src/training/memory/: batch.rs  convert_episode_to_training_frames.rs  episode_memory.rs  mod.rs
src/training/model/: mod.rs  model.rs  model_config.rs  target_q_val_builder.rs
src/training/optimize_model/: calculate_target_q_vals.rs  generate_target_rewards.rs  mod.rs  optimize_model.rs  tensor_ops.rs
src/ui/: mod.rs  render_board.rs  spectate_game.rs  ui.rs
