[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
burn = { version = "0.16.0", features = ["wgpu","train"] }
chrono = "0.4.40"
csv = "1.3.1"
derive-new = "0.7.0"
eframe = "0.30.0"
egui = "0.30.0"
json = "0.12.4"
nalgebra = "0.33.2"
num-traits = "0.2.19"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.219"
simplelog = "0.12.2"
